<resources>
    <string name="app_name">Maurea</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="masuk">Masuk</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="belum_punya_akun">Belum punya akun? Daftar disini</string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="sudah_punya_akun_masuk">Sudah punya akun? Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="beranda">Beranda</string>
    <string name="market">Market</string>
    <string name="profil">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_buah_buahan_anda">Scan buah buahan anda</string>
    <string name="cari_buah_sayur"><![CDATA[Cari buah & sayur]]></string>
    <string name="halo">Halo,</string>
    <string name="ikon_untuk_notifikasi">ikon untuk notifikasi</string>
    <string name="yang_lagi_laris">Yang lagi laris</string>
    <string name="gambar_item_yang_dijual">gambar item yang dijual</string>
    <string name="email_tidak_boleh_kosong">Email tidak boleh kosong</string>
    <string name="password_tidak_boleh_kosong">Password tidak boleh kosong</string>
    <string name="password_minimal_8_karakter">Password minimal 8 karakter</string>
    <string name="login_error">Login gagal, periksa kembali koneksi internet anda</string>
    <string name="keluar">Keluar</string>
    <string name="username">Username</string>
    <string name="login_berhasil">Login berhasil</string>
    <string name="error_network">Terjadi kesalahan, silahkan cek koneksi internet anda</string>
    <string name="scan_your_s">Scan %s anda</string>
</resources>