<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_greeting"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp">

            <TextView
                android:id="@+id/tv_greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/halo"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@id/tv_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_greeting"
                app:layout_constraintTop_toBottomOf="@id/tv_greeting"
                tools:text="Wahyu Dwi" />

            <ImageView
                android:id="@+id/iv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ikon_untuk_notifikasi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_notification" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_popular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/yang_lagi_laris"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/cv_greeting"
        app:layout_constraintStart_toStartOf="@+id/cv_greeting"
        app:layout_constraintTop_toBottomOf="@id/cv_greeting" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_popular"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_popular"
        app:layout_constraintStart_toStartOf="@id/tv_popular"
        app:layout_constraintEnd_toEndOf="@id/tv_popular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/item_sale" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/scan_buah_buahan_anda"
        android:src="@drawable/ic_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>